--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="./font.css" />
     <!-- Link to main custom stylesheet -->
     <link rel="stylesheet" href="./style.css" />
+    <!-- Swiper styles cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <!-- Container for the entire page -->
@@ -630,6 +635,107 @@
           </aside>
         </div>
       </section>
+
+      <div class="bg-background py-14 lg:py-28">
+        <div class="relative">
+          <section
+            class="container grid grid-cols-1 items-center gap-11 lg:grid-cols-2"
+          >
+            <aside class="relative lg:static">
+              <img
+                src="./assets/images/testimonial-image.png"
+                class="relative z-10"
+                alt="testimonial"
+                data-aos="fade-right"
+                data-aos-duration="1000"
+              />
+              <img
+                src="./assets/images/testimonial-image-bg.png"
+                class="absolute -left-8 bottom-0 z-0 h-full w-full lg:w-1/2"
+                alt="testimonial"
+              />
+            </aside>
+
+            <aside class="relative">
+              <h2
+                class="mb-10 lg:text-5xl"
+                data-aos="fade-left"
+                data-aos-duration="1000"
+              >
+                3million+ People Believe Us for There Money
+              </h2>
+
+              <!-- Slider main container -->
+              <div
+                class="swiper"
+                data-aos="fade-left"
+                data-aos-duration="1000"
+                data-aos-delay="100"
+              >
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                  <!-- Slides -->
+                  <div class="swiper-slide">
+                    <p class="mb-10">
+                      In today's fast-paced digital world, your credit card
+                      should do more than just facilitate transactions. At
+                      Finora Credit, we've reimagined what a credit card can be,
+                      integrating cutting-edge technology with your everyday
+                      financial need
+                    </p>
+
+                    <h3 class="mb-2">Michael T.</h3>
+                    <p class="text-gray">Cardholder since 2022</p>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <p class="mb-10">
+                      In today's fast-paced digital world, your credit card
+                      should do more than just facilitate transactions. At
+                      Finora Credit, we've reimagined what a credit card can be,
+                      integrating cutting-edge technology with your everyday
+                      financial need
+                    </p>
+
+                    <h3 class="mb-2">Michael T.</h3>
+                    <p class="text-gray">Cardholder since 2022</p>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <p class="mb-10">
+                      In today's fast-paced digital world, your credit card
+                      should do more than just facilitate transactions. At
+                      Finora Credit, we've reimagined what a credit card can be,
+                      integrating cutting-edge technology with your everyday
+                      financial need
+                    </p>
+
+                    <h3 class="mb-2">Michael T.</h3>
+                    <p class="text-gray">Cardholder since 2022</p>
+                  </div>
+                </div>
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+
+                <!-- If we need navigation buttons -->
+                <!-- <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div> -->
+
+                <!-- If we need scrollbar -->
+                <!-- <div class="swiper-scrollbar"></div> -->
+              </div>
+              <div class="absolute bottom-0 right-0 z-50 flex gap-3">
+                <button class="slide-left px-6 py-4 lg:px-4 lg:py-2">
+                  <i class="fas fa-arrow-left"></i>
+                </button>
+                <button class="slide-right px-6 py-4 lg:px-4 lg:py-2">
+                  <i class="fas fa-arrow-right"></i>
+                </button>
+              </div>
+            </aside>
+          </section>
+        </div>
+      </div>
     </div>
 
     <!-- Font Awesome script for icons -->
@@ -642,6 +748,6 @@
     <!-- AOS script for animations -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Main JavaScript file -->
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
